# ChangeLog for x11-base/xorg-x11
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-x11/ChangeLog,v 1.502 2005/12/23 20:45:05 joshuabaergen Exp $

*xorg-x11-7.0 (23 Dec 2005)

  23 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +xorg-x11-7.0.ebuild:
  7.0 is here!

  21 Dec 2005; Doug Goldstein <cardoe@gentoo.org> xorg-x11-7.0.0_rc4.ebuild:
  adding ~ppc

  20 Dec 2005; Stephen P. Becker <geoman@gentoo.org>
  xorg-x11-7.0.0_rc4.ebuild:
  added ~mips keyword, bug

  19 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  xorg-x11-7.0.0_rc4.ebuild:
  Dropped ~mips and ~ppc since this depends on xorg-docs now.

  19 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  xorg-x11-7.0.0_rc4.ebuild:
  Added the xorg-docs package to metabuild.

*xorg-x11-7.0.0_rc4 (18 Dec 2005)

  18 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +xorg-x11-7.0.0_rc4.ebuild:
  Bump for 7.0RC4.

  16 Dec 2005; Stephen P. Becker <geoman@gentoo.org>
  xorg-x11-7.0.0_rc3-r1.ebuild:
  added ~mips keyword

  14 Dec 2005; Herbie Hopkins <herbs@gentoo.org>
  xorg-x11-7.0.0_rc3-r1.ebuild:
  Marked ~amd64 wrt bug #115539.

  14 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  xorg-x11-6.8.2-r4.ebuild, xorg-x11-6.8.2-r6.ebuild,
  xorg-x11-6.8.99.15-r4.ebuild:
  ttmkfdir was moved from x11-misc to x11-apps.

  14 Dec 2005; Doug Goldstein <cardoe@gentoo.org>
  xorg-x11-7.0.0_rc3-r1.ebuild:
  Adding ~ppc

  14 Dec 2005; Ferris McCormick <fmccor@gentoo.org>
  xorg-x11-7.0.0_rc3-r1.ebuild:
  Add ~sparc keyword --- Bug 115539.

  14 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>;
  -xorg-x11-7.0.0_rc1.ebuild, -xorg-x11-7.0.0_rc2.ebuild,
  -xorg-x11-7.0.0_rc2-r1.ebuild:
  Drop old versions.

*xorg-x11-7.0.0_rc3-r1 (14 Dec 2005)

  14 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +xorg-x11-7.0.0_rc3-r1.ebuild:
  Added mesa-progs to deps, which provides glxinfo and glxgears. Drop all