@@ -1,6 +1,11 @@
 # ChangeLog for x11-base/xorg-x11
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-x11/ChangeLog,v 1.502 2005/12/23 20:45:05 joshuabaergen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-x11/ChangeLog,v 1.503 2005/12/26 19:55:46 joshuabaergen Exp $
+
+  26 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
+  -xorg-x11-7.0.0_rc3.ebuild, -xorg-x11-7.0.0_rc3-r1.ebuild,
+  -xorg-x11-7.0.0_rc4.ebuild:
+  Clean out old versions.
 
 *xorg-x11-7.0 (23 Dec 2005)
 
